Fix z-index issue w/ footer button links.

--- a/less/styles.less
+++ b/less/styles.less
@@ -689,6 +689,7 @@ address {
                 position: relative;
                 float:left;
                 margin-right: .6vh;
+                z-index:1;
                 
                 background-repeat:no-repeat;
                 background-position:center center;
